test/Fail/Issue7136d.err
Issue7136d.agda:6.18: error: [ParseError]
Illegal pattern synonym argument  x
(Cohesion annotations not allowed in pattern synonym arguments.)
